# strato-spin

./: License  README.md  docker-compose.yml
strato_spin/: Dockerfile  README.md  pyproject.toml
strato_spin/strato_spin/: __init__.py
strato_spin/strato_spin/core/: deployer.py  parser.py  plugin_registry.py
strato_spin/strato_spin/resources/aws/dynamodb/: dynamodb_table.py
strato_spin/strato_spin/resources/aws/lambda/: lambda_func.py
strato_spin/tests/: test_deployer.py  test_packager.py
strato_spin_examples/: Dockerfile  LICENSE  README.md  pyproject.toml
strato_spin_examples/examples/: infra_dev.yaml
strato_spin_examples/examples/lambda_code/executor/: cli.py  index.py  logic.py  pyproject.toml
strato_spin_examples/examples/lambda_code/scheduler/: cli.py  index.py  logic.py  pyproject.toml
strato_spin_examples/examples/policies/: example_policy.yaml
strato_spin_examples/extensions/: custom_s3_bucket.py
strto_spin/: README.md  pyproject.toml
strto_spin/core/: clients.py  deployer.py  plugin_registry.py
strto_spin/resources/aws/lambda/: packager.py
strto_spin/resources/aws/s3/: s3_bucket.py
strto_spin/resources/aws/sqs/: sqs_queue.py
strto_spin/strato_spin/: cli.py
strto_spin/strato_spin/core/: assume_role.py  base_resource.py  parser.py
strto_spin/strato_spin/resources/aws/event_bridge/: eventbridge_rule.py
strto_spin/strato_spin/resources/aws/iam_role/: iam_role.py
strto_spin/strato_spin/resources/aws/kms/: kms_key.py
strto_spin/strato_spin/resources/aws/s3_upload/: s3_upload.py
strto_spin/strato_spin/resources/azure/function_app/: function_app.py
strto_spin/strato_spin/resources/gcp/cloud_run/: cloud_run.py
