[tool.poetry]
name = "strato-spin"
version = "0.1.0"
description = "A YAML-based multi-cloud infrastructure deployment tool"
authors = ["William An <anqfsh@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "strato_spin"}]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.37.37"
pyyaml = "^6.0.2"
poetry-core = "^2.1.2"
click = "^8.1.8"
azure-identity = "^1.21.0"
azure-mgmt-resource = "^23.3.0"
google-cloud-storage = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.poetry.scripts]
strato-spin = "strato_spin.cli:deploy"

[tool.poetry.urls]
"Repository" = "https://github.com/anqfsh/strato-spin"
