[tool.poetry]
name = "strato-spin-examples"
version = "0.1.0"
description = "Examples and extensions for StratoSpin"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
strato-spin = "^0.1.0"
pyyaml = ">=6.0.2"
click = ">=8.1.7"

[tool.poetry.dev-dependencies]
pytest = ">=8.3.2"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
