[tool.poetry]
name = "strato-spin-examples"
version = "0.1.0"
description = "Examples and extensions for StratoSpin"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
strato-spin = { path = "../strato_spin" }
pyyaml = "^6.0.2"
click = "^8.1.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
